force-app/main/default/objects/Income_Details__c/Income_Details__c.object-meta.xml
<CustomObject>
    <label>Income Details</label>
    <nameField>
        <displayFormat>INC-{0000}</displayFormat>
        <label>Income Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>