force-app/main/default/objects/Income_Details__c/fields/Existing_EMIs__c.field-meta.xml
<CustomField>
    <fullName>Existing_EMIs__c</fullName>
    <description>Loan obligations</description>
    <label>Existing EMIs</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>