force-app/main/default/objects/Income_Details__c/fields/Monthly_Gross_Income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Gross_Income__c</fullName>
    <description>Income before deductions</description>
    <label>Monthly Gross Income</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>